attempts to fix image expanding on mobile scroll

--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -69,10 +69,6 @@ ul.list-unstyled {
     padding-right: 25px;
     padding-left: 25px;
   }
-
-  .header {
-    max-width: 100%;
-  }
 }
 
 @media screen and (max-width: 420px) {
@@ -242,7 +238,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/school.JPG) no-repeat center center fixed;
+    background: url(../img/school.JPG) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
